--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://kiyanramjanum:kiyan@cluster0.yjkcyqx.mongodb.net/test"
+DATABASE_URL="YOUR_DB_CONNECTION_STRING"
 NEXTAUTH_JWT_SECRET="NEXT_JWT_SECRET"
 NEXTAUTH_SECRET="NEXT-SECRET"
 
